fixing alignments

--- a/style/style.css
+++ b/style/style.css
@@ -52,7 +52,7 @@ p {
   background: none;
   color: antiquewhite;
   position: absolute;
-  
+  left: 35%;
   
 }
 .btn-flash {
